test/libsolidity/syntaxTests/nameAndTypeResolution/194_negative_integers_to_unsigned.sol
contract test {
    uint8 public x = -1;
}
// ----
// TypeError 7407: (37-39): Type int_const -1 is not implicitly convertible to expected type uint8. Cannot implicitly convert signed literal to unsigned type.
